update chat helpers